Se agrega funcionalidad de loader a Entornos, Proyectos y Metadata

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -37,6 +37,7 @@ body {
 {% block defaultjs %}
     <script src="{% static 'gencoui/js/jquery.js' %}"></script>
     <script src="{% static 'gencoui/js/bootstrap.js' %}"></script>
+    <script src="{% static 'gencoui/js/rndr_module/rndr_main.js' %}"></script>
 <!--     // <script src="{% static 'gencoui/css/bootflat/js/icheck.min.js' %}"></script>
     // <script src="{% static 'gencoui/css/bootflat/js/jquery.fs.selecter.min.js' %}"></script>
     // <script src="{% static 'gencoui/css/bootflat/js/jquery.fs.stepper.min.js' %}"></script> -->
